# notifyd

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  go.mod  go.sum
.github/workflows/: ci.yml
.superpowers/sdd/: task-20-report.md
cmd/admin-bot/: main.go
cmd/api/: main.go
cmd/worker/: main.go
docs/: API.md  openapi.yaml
loadtest/: auth.js  config.js  full_scenario.js  notifications.js  queries.js  send_multi.js
migrations/: 000001_create_tenants.up.sql  000002_create_channel_configs.down.sql  000002_create_channel_configs.up.sql  000003_create_notifications.down.sql  000003_create_notifications.up.sql  000004_create_delivery_attempts.up.sql  000005_add_delivery_prefs_and_metrics.down.sql  000005_add_delivery_prefs_and_metrics.up.sql  000006_add_entitlements_and_api_keys.down.sql  000006_add_entitlements_and_api_keys.up.sql  000007_add_email_channel_type.down.sql  000007_add_email_channel_type.up.sql  000008_add_slack_channel_type.down.sql  000008_add_slack_channel_type.up.sql  000009_add_webhook_channel_type.down.sql  000009_add_webhook_channel_type.up.sql  000010_create_webhook_endpoints.up.sql
scripts/: bcrypt.go  e2e_test.sh
sdks/: PUBLISHING.md  README.md
sdks/go/: README.md  (+10 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/notifyd_sdk/: __init__.py  client.py  errors.py  signature.py  types.py
sdks/python/tests/: conftest.py  test_client.py  test_concurrency.py  test_duration.py  test_signature.py
(+134 files in other folders)
