[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notifyd-sdk"
version = "0.1.0"
description = "Official Python client for the notifyd notification delivery API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31,<3",
]

[project.urls]
Repository = "https://github.com/mahrous-amer/notifyd"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]
